--- a/src/styles/components/radio-buttons.scss
+++ b/src/styles/components/radio-buttons.scss
@@ -34,7 +34,6 @@ $custom-radio-disabled-pip-color:   rgba(color(cyan), 0.40);
     border-radius: 100%;
     display: inline-block;
     outline: none;
-    transform: translateY(22%);
     vertical-align: middle;
     width: $custom-radio-size;
 
